Grid header display & fix dashboard title spacing
Change .dashboard columns to auto

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body > .container,
 .dashboard,
 .user-navigation,
 .utility,
+.header,
 .action,
 .greeting,
 .content,
@@ -77,15 +78,16 @@ h1 {
 
 .dashboard {
     align-content: start;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto;
     align-items: center;
     justify-content: start;
     justify-items: start;
+    gap: 10px;
 }
 
 .dashboard > img {
     color: white;
-    max-width: 50px;
+    min-width: 40px;
     margin: 0;
     padding: 0;
 }
@@ -105,6 +107,9 @@ h1 {
 
 .header {
     font-weight: bold;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    padding: 15px;
 }
 
 .header > .top {
@@ -115,7 +120,7 @@ h1 {
 
 .action {
     grid-template-columns: auto minmax(max-content, 1fr) repeat(3, auto);
-    gap: 15px;
+    gap: 5px;
     align-items: center;
 }
 
@@ -138,7 +143,7 @@ h1 {
     font-size: 1.25rem;
 }
 
-button {
+div.action > button {
     background-color: #0874b2;
     color: white;
     border: none;
